<resources>
    <string name="app_name">Healthy Habits</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="buttonHome">xml</string>
    <string name="buttonFood">xml</string>
    <string name="buttonDrink">xml</string>
    <string name="buttonExercise">xml</string>
    <string name="buttonSleep">xml</string>
    <string name="buttonSocial">xml</string>
    <string name="signUp_title">Sign Up</string>
    <string name="signIn_title">Sign In</string>
    <string name="home_title">Home</string>
    <string name="food_title">Food</string>
    <string name="drink_title">Drink</string>
    <string name="exercise_title">Exercise</string>
    <string name="sleep_title">Sleep</string>
    <string name="social_title">Social</string>
    <array name="Foods">
        <item>Fruit</item>
        <item>Vegetables</item>
        <item>Bread</item>
        <item>Meat</item>
        <item>Fish</item>
        <item>Dairy</item>
        <item>Desserts</item>
        <item>Snacks</item>
    </array>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="title_activity_sleep">SleepActivity</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="title_activity_food_fragment">FoodFragmentActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="tab_text_5">Tab 5</string>
    <string name="tab_text_6">Tab 6</string>
    <string name="tab_text_7">Tab 7</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test">Test</string>
    <array name="Drinks">
        <item>Beer</item>
        <item>Wine</item>
        <item>Dairy</item>
        <item>Fruit Juice</item>
        <item>Fizzy</item>
    </array>
</resources>
