<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".DrinkActivity">

    <ImageButton
        android:id="@+id/buttonHome"
        android:layout_width="53dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO" android:text="@string/buttonHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home" />

    <ImageButton
        android:id="@+id/buttonFood"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO" android:text="@string/buttonFood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonHome"
        app:srcCompat="@drawable/food" />

    <ImageButton
        android:id="@+id/buttonDrink"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO" android:text="@string/buttonDrink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonHome"
        app:srcCompat="@drawable/drink" />

    <ImageButton
        android:id="@+id/buttonExercise"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="184dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO" android:text="@string/buttonExercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonHome"
        app:srcCompat="@drawable/exercise" />

    <ImageButton
        android:id="@+id/buttonSleep"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO" android:text="@string/buttonSleep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogout"
        app:srcCompat="@drawable/sleep" />

    <ImageButton
        android:id="@+id/buttonSocial"
        android:layout_width="46dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO" android:text="@string/buttonSocial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogout"
        app:srcCompat="@drawable/social" />

    <ImageButton
        android:id="@+id/buttonLogout"
        android:layout_width="48dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="TODO" app:srcCompat="@drawable/logout" />

    <View
        android:id="@+id/divider"
        android:layout_width="371dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:backgroundTint="3b14a0" />

</android.support.constraint.ConstraintLayout>