<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SleepActivity">

    <EditText
        android:id="@+id/editTextAverage7"
        android:layout_width="411dp"
        android:layout_height="75dp"
        android:layout_marginTop="428dp"
        android:background="#9076db"
        android:ems="10"
        android:hint="Sunday"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAverage6"
        android:layout_width="412dp"
        android:layout_height="75dp"
        android:layout_marginTop="356dp"
        android:background="#a28ae2"
        android:ems="10"
        android:hint="Saturday"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAverage5"
        android:layout_width="415dp"
        android:layout_height="75dp"
        android:layout_marginTop="288dp"
        android:background="#af9ce2"
        android:ems="10"
        android:hint="Friday"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAverage4"
        android:layout_width="411dp"
        android:layout_height="75dp"
        android:layout_marginTop="216dp"
        android:background="#b5a5e2"
        android:ems="10"
        android:hint="Thursday"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAverage3"
        android:layout_width="412dp"
        android:layout_height="75dp"
        android:layout_marginTop="144dp"
        android:background="#c0b3e5"
        android:ems="10"
        android:hint="Wednesday"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAverage2"
        android:layout_width="412dp"
        android:layout_height="75dp"
        android:layout_marginTop="72dp"
        android:background="#cbc0e8"
        android:ems="10"
        android:hint="Tuesday"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAverage1"
        android:layout_width="412dp"
        android:layout_height="75dp"
        android:background="#d4cce8"
        android:ems="10"
        android:hint="Monday"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonHome"
        android:layout_width="53dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO" android:text="@string/buttonHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home" />

    <ImageButton
        android:id="@+id/buttonFood"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO" android:text="@string/buttonFood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonHome"
        app:srcCompat="@drawable/food" />

    <ImageButton
        android:id="@+id/buttonDrink"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO" android:text="@string/buttonDrink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonHome"
        app:srcCompat="@drawable/drink" />

    <ImageButton
        android:id="@+id/buttonExercise"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="184dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO" android:text="@string/buttonExercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonHome"
        app:srcCompat="@drawable/exercise" />

    <ImageButton
        android:id="@+id/buttonSleep"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO" android:text="@string/buttonSleep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogout"
        app:srcCompat="@drawable/sleep" />

    <ImageButton
        android:id="@+id/buttonSocial"
        android:layout_width="46dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:contentDescription="TODO" android:text="@string/buttonSocial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogout"
        app:srcCompat="@drawable/social" />

    <ImageButton
        android:id="@+id/buttonLogout"
        android:layout_width="48dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="TODO" app:srcCompat="@drawable/logout" />

    <View
        android:id="@+id/divider"
        android:layout_width="371dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:backgroundTint="3b14a0" />


    <TextView
        android:id="@+id/textViewAvg"
        android:layout_width="161dp"
        android:layout_height="74dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="504dp"
        android:background="#d5d2dd"
        android:gravity="center"
        android:hint="Average hours"
        android:textColor="@color/inputLabelColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAvg"
        android:layout_width="162dp"
        android:layout_height="74dp"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="256dp"
        android:background="#d5d2dd"
        android:enabled="false"
        android:onClick="avgFunction"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="Calculate"
        android:textAllCaps="false"
        android:textColor="@color/inputLabelColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>